added a button to center the map at the user-position
Signed-off-by: Tino Dietel <tino.dietel@gmail.com>

--- a/css/site.css
+++ b/css/site.css
@@ -38,3 +38,8 @@ table.display tr:nth-child(even) {
 	bottom: 15px;
 	left: 15px;
 }
+
+.leaflet-center-on-position
+{
+	background-image: url(../img/gps13.png);
+}
