--- a/css/site.css
+++ b/css/site.css
@@ -45,3 +45,8 @@ table.display tr:nth-child(even) {
 {
 	background-image: url(../img/gps13.png);
 }
+
+#informationModal .tab-pane {
+	max-height: 560px;
+	overflow-y: auto;
+}
